--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,24 @@ services:
 script:
   - docker build -t docker.haihui.site/gogsc:0.1 .
   - docker push docker.haihui.site/gogsc:0.1
+  - sudo apt-get install python
+  - sudo pip install docker ansible
+  - sudo chmod 755 deploy.sh
+before_install:
+  - openssl aes-256-cbc -K $encrypted_1a092584ba06_key -iv $encrypted_1a092584ba06_iv -in id_rsa.enc -out id_rsa -d
+  - chmod 600 id_rsa
+  - eval $(ssh-agent)
+  - ssh-add id_rsa
+addons:
+  ssh_known_hosts: 123.56.24.251
+before_deploy:
+  - git add .
+  - git commit -m 'add id_rsa'
+deploy:
+  provider: script
+  script: ./deploy.sh
+  on:
+    branch: master
+notifications:
+  email:
+    - haihuiling2014@gmail.com
