--- a/ansible.yaml
+++ b/ansible.yaml
@@ -5,9 +5,11 @@
     - name: deploy web
       docker_container:
         name: web
-        image: docker.haihui.site/gogsc:0.1
+        image: docker.haihui.site/gogsc:{{tag}}
         state: started
         pull: true
+        restart: true
+        restart_policy: always
         env:
           wxAppId: "{{wxAppId}}"
           wxappSecret: "{{wxappSecret}}"
