--- a/ansible.yaml
+++ b/ansible.yaml
@@ -10,7 +10,7 @@
     - name: deploy web
       docker_container:
         name: web
-        image: docker.haihui.site/gogsc:{{tag}}
+        image: docker.haihui.site/go-gsc:{{tag}}
         state: started
         pull: true
         restart: true
